2005-09-12  Andras Varga

        * cenvir.cc, omnetapp.cc/h: default of "perform-gc" option changed to
        false. USER-ALLOCATED OBJECTS ARE NO LONGER DELETED AT NETWORK CLEANUP.

        * new option:
            [General]
            print-undisposed=<bool>, default=true
	Selects whether the list of undisposed user objects is dumped at
	network cleanup (provided perform-gc=false). Ideally, users should
	fix simple module destructors instead of turning this option off.

	* filemgrs.cc/h: added new omnetpp.ini settings to adjust number
	of significant digits recorded into output vector and output scalar
	files:
	    [General]
	    output-scalar-precision=<int>,  default=12
	    output-vector-precision=<int>,  default=12
	The default precision is 12 digits. The following has to be considered
	when changing the default value:

	IEEE-754 doubles are 64-bit numbers. The mantissa is 52 bits, which
	is roughly equivalent to 16 decimal places (52*log(2)/log(10)).
	However, due to rounding errors (see program below), usually only
	12..14 digits are correct, and the rest is pretty much random garbage
	which should be ignored. However, when you convert the decimal
	representation back into an IEEE-754 double (as in Plove and Scalars),
	an additional small error will occurs because 0.1 (0.01, etc) cannot be
	represented precisely in binary. This error of converting to/from
	decimal (text) format is usually smaller than the one that the double
	variable already had before recording it into the file, however if
	it is important you can eliminate it by setting >16 digits precision
	for the file (but again, be aware that the last digits are garbage).

	OMNeT++ internally uses the "%g" format of C's printf(), specifically
	"%.*g". The precision specified in omnetpp.ini simply goes in there.
	The upper limit of precision seems to be 17 digits (setting it higher
	doesn't make any difference in the output).

	To see finite machine precision and rounding errors, try this code: