@@ -37,8 +37,8 @@ config timeline-maxnumevents	{1000}
 config editor-case-sensitive	{0}
 config editor-whole-words	{0}
 config filtobjlist-order	{Class}
-inspector "fifonet" "FifoNet" "2" "443x277+370+366"
 inspector "fifonet.sink" "FFSink" "1" "460x312+48+62"
-inspector "fifonet.sink.queueing time vector" "cOutVector" "2" "353x197+9+467"
+inspector "fifonet" "FifoNet" "2" "443x277+370+366"
 inspector "fifonet.fifo.queue" "cQueue" "1" "351x230+11+203"
+inspector "fifonet.sink.queueing time vector" "cOutVector" "2" "353x197+9+467"
 
