@@ -1,3 +1,8 @@
+2005-09-22  Andras Varga
+
+	* implemented @@listfile in the preload-ned-files option. 
+	See nedc/ChangeLog for more info.
+
 2005-09-12  Andras Varga
 
         * cenvir.cc, omnetapp.cc/h: default of "perform-gc" option changed to
